fixed spacing and error

--- a/Tasks/styles.css
+++ b/Tasks/styles.css
@@ -9,8 +9,6 @@
     font-style: italic;
     background-color: #FFFBE9;
     padding: 12px;
-    
-
 }
 #image{
     text-align: center;
@@ -38,9 +36,6 @@
     font-size: 24px;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 50px;
-    /* background-color: black;
-    color: white; */
-
 }
  small{
     font-size: x-small;
